--- a/login/style.css
+++ b/login/style.css
@@ -1,20 +1,22 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
-.container{
+
+.container {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../assets/pexels-pavel-danilyuk-6461063.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(pexels-pavel-danilyuk-6461063.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    justify-content:center ;
+    justify-content: center;
     align-items: center;
 }
-.form-box{
+
+.form-box {
     width: 90%;
     max-width: 450px;
     min-width: 350px;
@@ -24,58 +26,61 @@
     border-radius: 10px;
     box-shadow: -2px 2px 15px rgba(0,0,0,0.5);
 }
-.form-box h1{
+
+.form-box h1 {
     font-size: 32px;
     color: black;
 }
 
-.form-box .underline{
+.form-box .underline {
     width: 30px;
     height: 4px;
     background-color: black;
     margin: 10px auto 50px auto;
     border-radius: 5px;
-    transition:transform 0.5s;
+    transition: transform 0.5s;
 }
 
-.input-field{
+.input-field {
     background: #eaeaea;
     margin: 15px 0;
     display: flex;
     align-items: center;
-
     max-height: 60px;
     transition: max-height 0.5s;
     overflow: hidden;
 }
 
-.input-field input{
+.input-field input {
     width: 100%;
     background: transparent;
     border: 0;
     outline: 0;
     padding: 18px 15px;
 }
-.input-field i{
+
+.input-field i {
     margin-left: 15px;
     color: #999;
 }
 
-form p{
+form p {
     text-align: left;
     font-size: 12px;
 }
-form p a{
+
+form p a {
     text-decoration: none; 
-    /* color: black;  */
+    /* color: black; */
 }
-.btn-field{
+
+.btn-field {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-.btn-field button{
+.btn-field button {
     flex-basis: 48%;
     background-color: black;
     color: white;
@@ -85,10 +90,74 @@ form p a{
     cursor: pointer;
     transition: background 1s;
 }
-.input-group{
+
+.input-group {
     height: 280px;
 }
-button.disable{
+
+button.disable {
     background-color: #ffffff;
     color: #555;
+}
+
+/* Media Queries */
+
+/* Mobile */
+@media (max-width: 767px) {
+    .form-box {
+        padding: 30px;
+    }
+
+    .form-box h1 {
+        font-size: 24px;
+    }
+
+    .input-field {
+        margin: 10px 0;
+    }
+
+    .input-field input {
+        padding: 14px 10px;
+    }
+
+    .btn-field {
+        flex-direction: column;
+    }
+
+    .btn-field button {
+        width: 100%;
+        margin: 5px 0;
+    }
+}
+
+/* Tablet */
+@media (min-width: 768px) and (max-width: 1024px) {
+    .form-box {
+        padding: 40px;
+    }
+
+    .form-box h1 {
+        font-size: 28px;
+    }
+
+    .input-field {
+        margin: 12px 0;
+    }
+
+    .input-field input {
+        padding: 16px 12px;
+    }
+
+    .btn-field {
+        flex-direction: row;
+    }
+
+    .btn-field button {
+        width: 48%;
+    }
+}
+
+/* Desktop */
+@media (min-width: 1025px) {
+    /* No specific styles needed; default styles apply */
 }
